--- a/국민신문고_크롤링_프로그램.ipynb
+++ b/국민신문고_크롤링_프로그램.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import time\n",
     "import re\n",
     "from bs4 import BeautifulSoup\n",
-    "import pickle"
+    "import pickle\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -21,16 +22,16 @@
    "outputs": [],
    "source": [
     "# selenium version\n",
-    "def parse_content():\n",
-    "    '''글에 있는 내용을 스크래핑하는 함수\n",
+    "# def parse_content():\n",
+    "#     '''글에 있는 내용을 스크래핑하는 함수\n",
     "    \n",
-    "    output: title, date, question, answer, office를 저장한 딕셔너리'''\n",
+    "#     output: page_index, title, date, question, answer, office를 저장한 딕셔너리'''\n",
     "    \n",
-    "    return {\"title\":driver.find_elements_by_css_selector(\"#Form th.tit\")[0].text,\n",
-    "            \"date\":driver.find_elements_by_css_selector(\"#Form .date\")[0].text,\n",
-    "            \"question\":driver.find_elements_by_css_selector(\".questionDiv tbody div\")[0].text,\n",
-    "            \"answer\":driver.find_elements_by_css_selector(\".answerTxt\")[0].text,\n",
-    "            \"office\":driver.find_elements_by_css_selector(\".civilPart .pl10\")[0].text}"
+    "#     return {\"title\":driver.find_elements_by_css_selector(\"#Form th.tit\")[0].text,\n",
+    "#             \"date\":driver.find_elements_by_css_selector(\"#Form .date\")[0].text,\n",
+    "#             \"question\":driver.find_elements_by_css_selector(\".questionDiv tbody div\")[0].text,\n",
+    "#             \"answer\":driver.find_elements_by_css_selector(\".answerTxt\")[0].text,\n",
+    "#             \"office\":driver.find_elements_by_css_selector(\".civilPart .pl10\")[0].text}"
    ]
   },
   {
@@ -40,39 +41,39 @@
    "outputs": [],
    "source": [
     "# selenium version\n",
-    "if __name__ == \"__main__\":\n",
-    "    driver = webdriver.Chrome()\n",
-    "    driver.get(\"https://www.epeople.go.kr/jsp/user/pc/policy/uPcOpenCivilList.paid\")\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     driver = webdriver.Chrome()\n",
+    "#     driver.get(\"https://www.epeople.go.kr/jsp/user/pc/policy/uPcOpenCivilList.paid\")\n",
     "\n",
-    "    contents = []\n",
-    "    postList = []\n",
+    "#     contents = []\n",
+    "#     postList = []\n",
     "\n",
-    "    i = 1\n",
+    "#     i = 1\n",
     "\n",
-    "    try:\n",
-    "        while True:\n",
-    "            # 해당 페이지로 이동하는 자바스크립트 함수를 실행한다.\n",
-    "            driver.execute_script(\"javascript:gotoPage({})\".format(i))\n",
+    "#     try:\n",
+    "#         while True:\n",
+    "#             # 해당 페이지로 이동하는 자바스크립트 함수를 실행한다.\n",
+    "#             driver.execute_script(\"javascript:gotoPage({})\".format(i))\n",
     "\n",
-    "            # 현재 페이지에서 볼 수 있는 글 목록을 모두 리스트에 저장한다.\n",
-    "            temp = [_.get_attribute(\"href\") for _ in driver.find_elements_by_css_selector(\".taL a\")]\n",
-    "            postList.extend(temp)\n",
+    "#             # 현재 페이지에서 볼 수 있는 글 목록을 모두 리스트에 저장한다.\n",
+    "#             temp = [_.get_attribute(\"href\") for _ in driver.find_elements_by_css_selector(\".taL a\")]\n",
+    "#             postList.extend(temp)\n",
     "\n",
-    "            while postList:\n",
-    "                # 내용으로 이동한다\n",
-    "                driver.execute_script(postList.pop(0))\n",
+    "#             while postList:\n",
+    "#                 # 내용으로 이동한다\n",
+    "#                 driver.execute_script(postList.pop(0))\n",
     "\n",
-    "                # 제목, 날짜, 질문내용, 답변내용, 담당부서를 딕셔너리형태로 리스트에 추가한다.\n",
-    "                contents.append(parse_content())\n",
-    "                # 글 목록으로 돌아간다.\n",
-    "                driver.back()\n",
+    "#                 # 제목, 날짜, 질문내용, 답변내용, 담당부서를 딕셔너리형태로 리스트에 추가한다.\n",
+    "#                 contents.append(parse_content())\n",
+    "#                 # 글 목록으로 돌아간다.\n",
+    "#                 driver.back()\n",
     "\n",
-    "            # 다음 페이지로 넘어가도록 i를 증가시킨다.\n",
-    "            i += 1\n",
-    "            if i % 100 == 0:\n",
-    "                print(i)\n",
-    "    except:\n",
-    "        print(\"crawling finished\")"
+    "#             # 다음 페이지로 넘어가도록 i를 증가시킨다.\n",
+    "#             i += 1\n",
+    "#             if i % 100 == 0:\n",
+    "#                 print(i)\n",
+    "#     except:\n",
+    "#         print(\"crawling finished\")"
    ]
   },
   {
@@ -103,85 +104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# BeautifulSoup version\n",
-    "def get_href():\n",
-    "    ''' 국민신문고 민원 목록 페이지에서 글로 가는 링크를 찾아오는 함수\n",
-    "    \n",
-    "    input:\n",
-    "        \n",
+    "def find_contents_num():\n",
+    "    '''국민 신문고에 1년치 민원의 개수를 리턴\n",
     "    \n",
     "    output:\n",
-    "        links: 글로 가는 링크(href)를 담은 리스트 \n",
+    "    maximum: 민원 개수\n",
     "    '''\n",
     "    \n",
-    "    page_url = \"https://www.epeople.go.kr/jsp/user/pc/policy/uPcOpenCivilList.paid\"\n",
-    "    page_param = {\"pageNum\":1}\n",
-    "    links = []\n",
-    "    \n",
-    "    try:\n",
-    "        while True:\n",
-    "            # 민원 목록 페이지를 html로 parsing\n",
-    "            html = download(\"get\", page_url, page_param)\n",
-    "            dom = BeautifulSoup(html.text)\n",
-    "\n",
-    "            # 글로 가는 링크를 리스트에 넣는다.\n",
-    "            links.extend([_[\"href\"] for _ in dom.select(\"#pForm .taL a\")])\n",
-    "\n",
-    "            # 1000 page마다 표시\n",
-    "            if page_param[\"pageNum\"] % 1000 == 0:\n",
-    "                print(\"page: \", page_param[\"pageNum\"])\n",
-    "\n",
-    "            # 다음 페이지로 넘어간다.\n",
-    "            page_param[\"pageNum\"] += 1\n",
-    "            \n",
-    "    except:\n",
-    "        print(\"finished\")\n",
-    "        \n",
-    "    return links"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# BeautifulSoup version\n",
-    "def parse_content(url, params):\n",
-    "    ''' url과 params를 받아서 해당 글에 있는 민원 정보를 받아오는 함수\n",
-    "    \n",
-    "    input:\n",
-    "        url:\n",
-    "        params:\n",
-    "        \n",
-    "    output:\n",
-    "        딕셔너리: title, date, question, answer, office가 저장돼 있다. \n",
-    "    '''\n",
-    "    \n",
-    "    # 해당 글에 있는 html을 parsing\n",
-    "    html = download(\"get\", url, params)\n",
+    "    url = \"https://www.epeople.go.kr/jsp/user/pc/policy/uPcOpenCivilList.paid\"\n",
+    "    html = download(\"get\", url)\n",
     "    dom = BeautifulSoup(html.text)\n",
+    "    maximum = int(dom.select_one(\".page span\").text)\n",
     "    \n",
-    "    return {\"title\":dom.select_one(\"#Form th.tit\").text,\n",
-    "            \"date\":dom.select_one(\"#Form .date\").text,\n",
-    "            \"question\":dom.select_one(\".questionDiv tbody div\").text,\n",
-    "            \"answer\":dom.select_one(\".answerTxt\").text,\n",
-    "            \"office\":dom.select_one(\".civilPart .pl10\").text}"
+    "    return maximum"
    ]
   },
   {
@@ -190,10 +129,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 글 link 목록 생성\n",
-    "hrefs = get_href()\n",
+    "# BeautifulSoup version\n",
+    "def get_href(url, pageNum):\n",
+    "    ''' 국민신문고 민원 목록 페이지에서 글로 가는 링크를 찾아오는 함수\n",
+    "    \n",
+    "    input:\n",
+    "        url: 크롤링할 url\n",
+    "        pageNum: 글 목록에 있는 링크를 가져올 \n",
+    "    \n",
+    "    output:\n",
+    "        links: 글로 가는 링크(href)를 담은 리스트\n",
+    "        hits: 조회수\n",
+    "    '''\n",
+    "    \n",
+    "    # 민원 목록 페이지를 html로 parsing\n",
+    "    html = download(\"get\", url, {\"pageNum\":pageNum})\n",
+    "    dom = BeautifulSoup(html.text)\n",
+    "    \n",
+    "    lists = dom.select(\".listForm1.mt10 tbody tr\")\n",
+    "    \n",
+    "    # 글로 가는 링크를 리스트에 넣는다.\n",
+    "    links = [_.select_one(\"a\")[\"href\"] for _ in lists]\n",
+    "            \n",
+    "    # 조회수는 글 목록에만 있으므로 여기서 찾는다\n",
+    "    hits = [_.select(\"td\")[-1].text.strip() for _ in lists]\n",
+    "            \n",
+    "    return (links, hits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BeautifulSoup version\n",
+    "def parse_content(url, params, hits):\n",
+    "    ''' url과 params를 받아서 해당 글에 있는 민원 정보를 받아오는 함수\n",
+    "    \n",
+    "    input:\n",
+    "        url: 글 내용 url\n",
+    "        params: 해당 글 내용을 받아올 파라미터\n",
+    "        hits: 조회수를 담은 리스트, 조회수는 글 내용이 아니라 목록에서 확인할 수 있으므로 파라미터로 넘겨준다.\n",
+    "        \n",
+    "    output:\n",
+    "        딕셔너리: 목록번호, 제목, 등록일, 질문내용, 답변내용, 담당부서, 조회수가 저장돼 있다. \n",
+    "    '''\n",
+    "    \n",
+    "    # 해당 글에 있는 html을 parsing\n",
+    "    html = download(\"get\", url, params)\n",
+    "    dom = BeautifulSoup(html.text)\n",
+    "    \n",
+    "    return {'목록 번호': params[\"faq_no_n\"],\n",
+    "             '제목':dom.select_one(\"#Form th.tit\").text,\n",
+    "             '등록일':dom.select_one(\"#Form .date\").text,\n",
+    "             '질문내용':dom.select_one(\".questionDiv tbody div\").text.strip(),\n",
+    "             '답변내용':dom.select_one(\".answerTxt\").text,\n",
+    "             '담당부서':dom.select(\".civilPart .pl10\")[-1].text,\n",
+    "             '조회수': hits}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"sinmungo.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seen = data.page_index.tolist()\n",
+    "maximum = find_contents_num() // 10 + 1\n",
     "\n",
+    "# 민원 목록 url\n",
+    "baseURL = \"https://www.epeople.go.kr/jsp/user/pc/policy/uPcOpenCivilList.paid\"\n",
+    "\n",
+    "# 민원 상세 내용 url\n",
     "contentURL = \"https://www.epeople.go.kr/jsp/user/pc/policy/UPcUnionPolicyDetail.paid\"\n",
+    "contents= []\n",
+    "\n",
+    "# 국민 신문고에서 민원 상세 내용으로 넘겨주는 하이퍼링크는 javacript fucntion으로 작성돼있다.\n",
+    "# 해당 함수에서 필요로 하는 파라미터만 갖고 와서 get 방식에 넘겨줄 파라미터를 만들어서 html을 파싱한다.\n",
+    "# 매개 변수가 없어도 안 넣어주면 오류나서 모두 넣어준다.\n",
     "params = {\n",
     "    \"sdetail\":\"1\",\n",
     "    \"strFlag\":\"\",\n",
@@ -205,7 +228,7 @@
     "    \"pageNum\":\"\",\n",
     "    \"s_anc_c\":\"\",\n",
     "    \"flag\":\"3\",\n",
-    "    \"faq_no_n\":None,\n",
+    "    \"faq_no_n\":None,    # 민원 상세 내용에 따라 달라지는 파라미터\n",
     "    \"civil_no_c\":\"\",\n",
     "    \"peti_no_c\":\"\",\n",
     "    \"strFrom\":\"\",\n",
@@ -219,25 +242,50 @@
     "    \"search_gubun3\":\"\",\n",
     "    \"so_recom\":\"\",\n",
     "    \"so_recom_Subanc\":\"\",\n",
-    "    \"show_sele\":\"10\"}\n",
-    "\n",
-    "contents = []\n",
-    "\n",
-    "# 글 상세 페이지에 접근해서 필요한 정보 scraping\n",
-    "while hrefs:\n",
-    "    params[\"faq_no_n\"] = re.findall(r\"[\\d]+\", hrefs.pop(0))[1]\n",
-    "    \n",
-    "    contents.append(parse_content(contentURL, params))"
+    "    \"show_sele\":\"10\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"hrefs.pickle\", \"wb\") as f:\n",
-    "    pickle.dump(hrefs, f)"
+    "for i in range(8500,maximum):\n",
+    "    links, hits = get_href(baseURL, i+1)\n",
+    "    \n",
+    "    while links:\n",
+    "        temp = (links.pop(0), hits.pop(0))\n",
+    "        \n",
+    "        # 이미 봤던 페이지는 넘어간다.\n",
+    "        if re.findall(r\"[\\d]+\", temp[0])[1] in seen:\n",
+    "            continue\n",
+    "        \n",
+    "        # 봤던 페이지가 아니면 민원 내용을 딕셔너리에 저장한다.\n",
+    "        seen.append(re.findall(r\"[\\d]+\", temp[0])[1])\n",
+    "        params[\"faq_no_n\"] = re.findall(r\"[\\d]+\", temp[0])[1]\n",
+    "        contents.append(parse_content(contentURL, params, temp[1]))\n",
+    "        \n",
+    "        if len(seen) % 1000 == 0:\n",
+    "            print(\"seen: {}\".format(len(seen)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.concat([data.drop_duplicates(), pd.DataFrame.from_dict(contents).drop_duplicates()], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"sinmungo.csv\", encoding=\"utf-8\", index=False)"
    ]
   },
   {
@@ -264,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
